@@ -3,6 +3,7 @@ BUGS FIXED:
   * soundgen(): stochastic formants properly added to breathing noise even without specifying VTL (bug introduced in v1.6.0)
   * soundgen(), getSpectralEnvelope(): manually specifying bandwidth works again (bug introduced in v1.6.0)
   * soundgen(): tempEffects(pitchDriftDep = 0) no longer crashes because removing pitch drift no longer prevents amplitude drift from working
+  * transplantFormants(): step no longer conflicts with overlap
 
 MINOR:
   * soundgen(): if "noise" argument is numeric rather than a list, noise component is time-locked to voiced component  to ensure precisely the same timing
